# meme-generator-service

./: .gitignore  Makefile  README.md  docker-compose.yml
server/: Dockerfile  Makefile  pyproject.toml
server/meme_generator/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
server/meme_generator/migrations/: 0001_initial.py  0002_meme.py  0003_rating.py  0004_alter_rating_score.py  0005_alter_rating_score.py  0006_alter_memetemplate_image_url.py  0007_memetemplate_image.py  0008_meme_image_url.py  0009_remove_memetemplate_image_url.py  0010_alter_meme_bottom_text_alter_meme_top_text.py  0011_alter_memetemplate_image.py
server/meme_generator/models/: __init__.py  meme.py  rating.py  template.py
server/meme_generator/serializers/: __init__.py  meme.py  rating.py  template.py
server/meme_generator/services/: __init__.py  surprise_me.py
server/meme_generator/views/: __init__.py  meme.py  rating.py  template.py
server/tests/: base.py  test_meme.py  test_random_meme.py  test_rating.py  test_suprise_me.py  test_template.py  test_top_memes.py
